book and media report content update Fri 09/10/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/09/2021 06:00<br>
+Completed books sorted by folder - 09/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 56 books - 542H 5M / 22D 14H 5M<br>
+Completed in 2021 : 57 books - 546H 17M / 22D 18H 17M<br>
 Total Comic Trades : 25<br>
-Average book length : 9H 40M<br>
-Hours read per week : 15H 3M<br>
-On pace to complete 81 books (785H 41M / 32D 17H 41M) by the end of 2021<br>
+Average book length : 9H 35M<br>
+Hours read per week : 15H 6M<br>
+On pace to complete 82 books (788H 38M / 32D 20H 38M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -54,6 +54,7 @@ Rick and Morty Dungeons and Dragons - 4H 28M<br>
 Scarlet Witch Vol. 1 Witches' Road - 3H 29M<br>
 Silver Surfer Black - 3H 44M<br>
 Spider-Ham Aporkalypse Now - 3H 29M<br>
+Stamped--Racism, Antiracism, and You - Jason Reynolds - Ibram X. Kendi - 4H 12M<br>
 Star Wars the High Republic - A Test of Courage - Justina Ireland - 4H 35M<br>
 Star Wars the High Republic - Into the Dark - Claudia Gray - 11H 14M<br>
 Star Wars the High Republic - Light of the Jedi - Charles Soule - 13H 38M<br>
@@ -459,9 +460,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
+Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 56 books - 542H 5M / 22D 14H 5M<br>
+Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -474,28 +475,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6069H 54M / 252D 21H 54M<br>
+Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-211 queued items: 2744H 21M / 114D 8H 21M<br>
+210 queued items: 2740H 8M / 114D 4H 8M<br>
 0 reserve titles are marked as high priority<br>
-25.89% of reserve items are queued<br>
+25.77% of reserve items are queued<br>
  <br>
-All books included in this report: 1204 titles - 14426H 9M / 601D 2H 9M<br>
+All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 389 titles - 4319H 53M / 179D 23H 53M<br>
-Total remaining in queue and reserve: 815 titles - 10106H 15M / 421D 2H 15M<br>
-Average completed per year: 44.8 titles - 497H 16M / 20D 17H 16M<br>
+Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
+Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
+Average completed per year: 44.9 titles - 497H 35M / 20D 17H 35M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.989 (1.989 seconds)<br>
-Total time including file writes: 00:00:01.989 (1.989 seconds)
+Total time to process all reports: 00:00:02.501 (2.501 seconds)<br>
+Total time including file writes: 00:00:02.501 (2.501 seconds)
 </div>
 </body>
 </html>
