--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/09/2021 06:00<br>
+Reserved books sorted by length - 09/10/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 815 books<br>
@@ -51,7 +51,6 @@ Thor Vol 1 The Goddess of Thunder - 4H 4M (Book Reserve - Comic Trades)<br>
 Lumberjanes - 4H 6M (Book Reserve - Comic Trades)<br>
 Siddhartha - Hermann Hesse - 4H 11M (Queue - Current Audiobooks)<br>
 At the Mountains of Madness - H. P. Lovecraft - 4H 11M (Queue - Current Audiobooks)<br>
-Stamped--Racism, Antiracism, and You - Jason Reynolds - Ibram X. Kendi - 4H 12M (Queue - Current Audiobooks)<br>
 Doctor Who - Dark Eyes 2 (Eighth Doctor) - 4H 13M (Book Reserve - Audiobooks)<br>
 Wolverine - Black, White & Blood Treasury Edition - 4H 14M (Book Reserve - Comic Trades)<br>
 Pern 6-02 - Nerilka's Story - 4H 20M (Book Reserve - Audiobooks)<br>
@@ -612,6 +611,7 @@ HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M (Queue - C
 Poppy War 1 - The Poppy War - R. F. Kuang - 19H 2M (Book Reserve - Audiobooks)<br>
 The Institute - Stephen King - 19H 4M (Queue - Current Audiobooks)<br>
 Red Rising 2 - Golden Son - Pierce Brown - 19H 8M (Book Reserve - Audiobooks)<br>
+Stamped from the Beginning - Ibram X. Kendi - 19H 13M (Book Reserve - Audiobooks)<br>
 The Gene - Siddhartha Mukherjee - 19H 28M (Queue - Current Audiobooks)<br>
 The Windup Girl - Paolo Bacigalupi - 19H 32M (Book Reserve - Audiobooks)<br>
 The Great Influenza - John M. Barry - 19H 32M (Book Reserve - Audiobooks)<br>
@@ -738,9 +738,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
+Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 56 books - 542H 5M / 22D 14H 5M<br>
+Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -753,28 +753,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6069H 54M / 252D 21H 54M<br>
+Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-211 queued items: 2744H 21M / 114D 8H 21M<br>
+210 queued items: 2740H 8M / 114D 4H 8M<br>
 0 reserve titles are marked as high priority<br>
-25.89% of reserve items are queued<br>
+25.77% of reserve items are queued<br>
  <br>
-All books included in this report: 1204 titles - 14426H 9M / 601D 2H 9M<br>
+All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
 Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 389 titles - 4319H 53M / 179D 23H 53M<br>
-Total remaining in queue and reserve: 815 titles - 10106H 15M / 421D 2H 15M<br>
-Average completed per year: 44.8 titles - 497H 16M / 20D 17H 16M<br>
+Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
+Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
+Average completed per year: 44.9 titles - 497H 35M / 20D 17H 35M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.989 (1.989 seconds)<br>
-Total time including file writes: 00:00:01.989 (1.989 seconds)
+Total time to process all reports: 00:00:02.501 (2.501 seconds)<br>
+Total time including file writes: 00:00:02.501 (2.501 seconds)
 </div>
 </body>
 </html>
