--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 09/10/2021 06:00<br>
+All books sorted by name - 09/11/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 1205 books<br>
@@ -1248,17 +1248,17 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 25.77% of reserve items are queued<br>
  <br>
 All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
 Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 35M / 20D 17H 35M<br>
+Average completed per year: 44.9 titles - 497H 26M / 20D 17H 26M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 9.9<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:02.501 (2.501 seconds)<br>
-Total time including file writes: 00:00:02.501 (2.501 seconds)
+Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
+Total time including file writes: 00:00:01.571 (1.571 seconds)
 </div>
 </body>
 </html>
