book and media report content update Sun 09/12/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/11/2021 06:00<br>
+Completed books sorted by folder - 09/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 57 books - 546H 17M / 22D 18H 17M<br>
 Total Comic Trades : 25<br>
 Average book length : 9H 35M<br>
-Hours read per week : 15H 3M<br>
-On pace to complete 81 books (785H 29M / 32D 17H 29M) by the end of 2021<br>
+Hours read per week : 14H 59M<br>
+On pace to complete 81 books (782H 26M / 32D 14H 26M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -491,12 +491,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
 Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 26M / 20D 17H 26M<br>
+Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
-Total time including file writes: 00:00:01.571 (1.571 seconds)
+Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
+Total time including file writes: 00:00:01.602 (1.602 seconds)
 </div>
 </body>
 </html>
