--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/11/2021 06:00<br>
+Completed books sorted by name - 09/12/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 390 books<br>
@@ -438,12 +438,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
 Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 26M / 20D 17H 26M<br>
+Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
-Total time including file writes: 00:00:01.571 (1.571 seconds)
+Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
+Total time including file writes: 00:00:01.602 (1.602 seconds)
 </div>
 </body>
 </html>
