book and media report content update Mon 09/13/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,18 +7,19 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/12/2021 06:00<br>
+Completed books sorted by folder - 09/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 : 58 books - 551H 54M / 22D 23H 54M<br>
 Total Comic Trades : 25<br>
-Average book length : 9H 35M<br>
-Hours read per week : 14H 59M<br>
-On pace to complete 81 books (782H 26M / 32D 14H 26M) by the end of 2021<br>
+Average book length : 9H 30M<br>
+Hours read per week : 15H 5M<br>
+On pace to complete 82 books (787H 25M / 32D 19H 25M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
 Age of Madness 1 - A Little Hatred - Joe Abercrombie - 20H 26M<br>
+Atomic Habits - James Clear - 5H 36M<br>
 Attack on Titan 29 - 5H 58M<br>
 Attack on Titan 30 - 5H 58M<br>
 Attack on Titan 31 - 5H 58M<br>
@@ -460,9 +461,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -481,22 +482,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2740H 8M / 114D 4H 8M<br>
+212 queued items: 2747H 58M / 114D 11H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.77% of reserve items are queued<br>
+25.95% of reserve items are queued<br>
  <br>
-All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
-Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
+Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
+Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
+Average completed per year: 45.0 titles - 497H 46M / 20D 17H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.0<br>
  <br>
-Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
-Total time including file writes: 00:00:01.602 (1.602 seconds)
+Total time to process all reports: 00:00:07.268 (7.268 seconds)<br>
+Total time including file writes: 00:00:07.269 (7.269 seconds)
 </div>
 </body>
 </html>
