--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/12/2021 06:00<br>
+Completed books sorted by name - 09/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-390 books<br>
+391 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -44,6 +44,7 @@ Arcanum Unbounded - Brandon Sanderson - 22H 37M (Completed in 2020)<br>
 Ark - Veronica Roth - 1H 22M (Completed in 2020)<br>
 Armada - Ernest Cline - 11H 54M (Completed in 2015)<br>
 Astrophysics for People in a Hurry - Neil DeGrasse Tyson - 3H 42M (Completed in 2017)<br>
+Atomic Habits - James Clear - 5H 36M (Completed in 2021)<br>
 Attack on Titan 29 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 30 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 31 - 5H 58M (Completed in 2021)<br>
@@ -407,9 +408,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -428,22 +429,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2740H 8M / 114D 4H 8M<br>
+212 queued items: 2747H 58M / 114D 11H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.77% of reserve items are queued<br>
+25.95% of reserve items are queued<br>
  <br>
-All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
-Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
+Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
+Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
+Average completed per year: 45.0 titles - 497H 46M / 20D 17H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.0<br>
  <br>
-Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
-Total time including file writes: 00:00:01.602 (1.602 seconds)
+Total time to process all reports: 00:00:07.268 (7.268 seconds)<br>
+Total time including file writes: 00:00:07.269 (7.269 seconds)
 </div>
 </body>
 </html>
