--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/12/2021 06:00<br>
+Reserved books sorted by folder - 09/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks : 181 books - 2264H 10M / 94D 8H 10M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -24,7 +24,6 @@ American Moonshot - John F. Kennedy and the Great Space Race - Douglas Brinkley 
 Antifragile - Nassim Nicholas Taleb - 16H 19M<br>
 Arguing with Zombies - Paul Krugman - 12H 18M<br>
 At the Mountains of Madness - H. P. Lovecraft - 4H 11M<br>
-Atomic Habits - James Clear - 5H 36M<br>
 Behave - The Biology of Humans at Our Best and Worst - Robert M. Sapolsky - 26H 34M<br>
 Beyond Order - Jordan B. Peterson - 13H 14M<br>
 Bill Hodges 2 - Finders Keepers - Stephen King - 13H 9M<br>
@@ -71,6 +70,9 @@ How to Talk When Kids Won't Listen - Joanna Faber - 8H 56M<br>
 HP 5 - Harry Potter and the Order of the Phoenix - J.K. Rowling - 27H 10M<br>
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M<br>
 HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M<br>
+HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
+HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M<br>
+HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M<br>
 Human Hacking - Christopher Hadnagy - 8H 33M<br>
 Hyperfocus - Chris Bailey - 6H 41M<br>
 Inheritance 1 - The Hundred Thousand Kingdoms - N. K. Jemisin - 11H 51M<br>
@@ -858,9 +860,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -879,22 +881,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2740H 8M / 114D 4H 8M<br>
+212 queued items: 2747H 58M / 114D 11H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.77% of reserve items are queued<br>
+25.95% of reserve items are queued<br>
  <br>
-All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
-Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
+Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
+Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
+Average completed per year: 45.0 titles - 497H 46M / 20D 17H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.0<br>
  <br>
-Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
-Total time including file writes: 00:00:01.602 (1.602 seconds)
+Total time to process all reports: 00:00:07.268 (7.268 seconds)<br>
+Total time including file writes: 00:00:07.269 (7.269 seconds)
 </div>
 </body>
 </html>
