--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/12/2021 06:00<br>
+Reserved books sorted by length - 09/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-815 books<br>
+817 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -28,6 +28,7 @@ Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M (
 Of Mice and Men - John Steinbeck - 3H 12M (Queue - Current Audiobooks)<br>
 Mind over Weight - Ian K. Smith, M.D - 3H 18M (Book Reserve - Audiobooks)<br>
 The Call of the Wild - Jack London - 3H 20M (Queue - Current Audiobooks)<br>
+HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Queue - Current Audiobooks)<br>
 The Canterbury Tales - Geoffrey Chaucer - 3H 22M (Book Reserve - Audiobooks)<br>
 William Shakespeare's The Empire Striketh Back - 3H 26M (Book Reserve - Audiobooks)<br>
 Spider-gwen vol 3 - 3H 29M (Book Reserve - Comic Trades)<br>
@@ -62,6 +63,7 @@ The Wake-Up Call - John Micklethwait - 4H 29M (Queue - Current Audiobooks)<br>
 Mood Elevator - Berrett Koehler - 4H 33M (Book Reserve - Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 3 - Sir Arthur Conan Doyle - 4H 35M (Book Reserve - Audiobooks)<br>
 The Answer Is - Alex Trebek - 4H 37M (Queue - Current Audiobooks)<br>
+HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Queue - Current Audiobooks)<br>
 Transformers All Hail Megatron Volume 2 - 4H 43M (Book Reserve - Comic Trades)<br>
 A Study in Scarlet - Sir Arthur Conan Doyle - 4H 46M (Book Reserve - Audiobooks)<br>
 Man's Search for Meaning - Viktor E. Frankl - 4H 46M (Queue - Current Audiobooks)<br>
@@ -77,6 +79,7 @@ Twilight of Democracy - Anne Applebaum - 5H 17M (Book Reserve - Audiobooks)<br>
 The Casebook of Sherlock Holmes II - Sir Arthur Conan Doyle - 5H 18M (Book Reserve - Audiobooks)<br>
 Sherlock Holmes--A Baker Street Dozen - Sir Arthur Conan Doyle - 5H 19M (Book Reserve - Audiobooks)<br>
 The Mist - Stephen King - 5H 21M (Book Reserve - Audiobooks)<br>
+HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Queue - Current Audiobooks)<br>
 Breakfast of Champions - Kurt Vonnegut - 5H 27M (Book Reserve - Audiobooks)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
 ADHD 2.0 - Edward M. Hallowell - 5H 28M (Queue - Current Audiobooks)<br>
@@ -85,7 +88,6 @@ Time Quartet 2 - A Wind in the Door - Madeleine L'engle - 5H 29M (Book Reserve -
 The God Equation - Michio Kaku - 5H 32M (Book Reserve - Audiobooks)<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M (Queue - Current Audiobooks)<br>
 Diana and the Underworld Odyssey - Aisha Saeed - 5H 36M (Queue - Current Audiobooks)<br>
-Atomic Habits - James Clear - 5H 36M (Queue - Current Audiobooks)<br>
 Raising Good Humans - Carla Naumburg - 5H 38M (Queue - Current Audiobooks)<br>
 It Was All a Lie - Stuart Stevens - 5H 39M (Book Reserve - Audiobooks)<br>
 Umbrella Academy vol 1 - 5H 43M (Book Reserve - Comic Trades)<br>
@@ -738,9 +740,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -759,22 +761,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2740H 8M / 114D 4H 8M<br>
+212 queued items: 2747H 58M / 114D 11H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.77% of reserve items are queued<br>
+25.95% of reserve items are queued<br>
  <br>
-All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
-Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
+Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
+Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
+Average completed per year: 45.0 titles - 497H 46M / 20D 17H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.0<br>
  <br>
-Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
-Total time including file writes: 00:00:01.602 (1.602 seconds)
+Total time to process all reports: 00:00:07.268 (7.268 seconds)<br>
+Total time including file writes: 00:00:07.269 (7.269 seconds)
 </div>
 </body>
 </html>
