--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -64,6 +64,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1583157769l/48722104._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1596737897l/52431850._SX318_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1568739320l/52220686._SX318_SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1535115320l/40121378._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
