--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 09/12/2021 06:00<br>
+Reserved books sorted by name - 09/13/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-815 books<br>
+817 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -72,7 +72,6 @@ Assignment in Eternity - Robert A. Heinlein - 8H 43M (Book Reserve - Audiobooks)
 Astonishing Spider-man & Wolverine - 5H 13M (Book Reserve - Comic Trades)<br>
 Astonishing X-Men Vol 1 Gifted - 4H 43M (Book Reserve - Comic Trades)<br>
 At the Mountains of Madness - H. P. Lovecraft - 4H 11M (Queue - Current Audiobooks)<br>
-Atomic Habits - James Clear - 5H 36M (Queue - Current Audiobooks)<br>
 Atomic Robo Crystals are Integral - 13H 4M (Book Reserve - Comic Trades)<br>
 Atomic Robo Everything Explodes - 11H 57M (Book Reserve - Comic Trades)<br>
 Attack on Titan 33 - 5H 58M (Book Reserve - Manga)<br>
@@ -273,6 +272,9 @@ HP 1 - Harry Potter und der Stein der Weisen - J.K. Rowling - 10H 27M (Book Rese
 HP 5 - Harry Potter and the Order of the Phoenix - J.K. Rowling - 27H 10M (Queue - Current Audiobooks)<br>
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M (Queue - Current Audiobooks)<br>
 HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M (Queue - Current Audiobooks)<br>
+HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Queue - Current Audiobooks)<br>
+HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Queue - Current Audiobooks)<br>
+HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Queue - Current Audiobooks)<br>
 Hainish Cycle 1 - The Dispossessed - Ursula K. Le Guin - 13H 29M (Queue - Current Audiobooks)<br>
 Hainish Cycle 5 - City of Illusions - Ursula K. Le Guin - 7H 24M (Book Reserve - Audiobooks)<br>
 Hallucinations - Oliver Sacks - 9H 52M (Queue - Current Audiobooks)<br>
@@ -832,9 +834,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2256H 20M / 94D 0H 20M<br>
+Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 57 books - 546H 17M / 22D 18H 17M<br>
+Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -853,22 +855,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2740H 8M / 114D 4H 8M<br>
+212 queued items: 2747H 58M / 114D 11H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.77% of reserve items are queued<br>
+25.95% of reserve items are queued<br>
  <br>
-All books included in this report: 1205 titles - 14445H 22M / 601D 21H 22M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 390 titles - 4324H 6M / 180D 4H 6M<br>
-Total remaining in queue and reserve: 815 titles - 10121H 16M / 421D 17H 16M<br>
-Average completed per year: 44.9 titles - 497H 17M / 20D 17H 17M<br>
+Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
+Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
+Average completed per year: 45.0 titles - 497H 46M / 20D 17H 46M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Remaining years of reserve material at current year pace: 10.0<br>
  <br>
-Total time to process all reports: 00:00:01.602 (1.602 seconds)<br>
-Total time including file writes: 00:00:01.602 (1.602 seconds)
+Total time to process all reports: 00:00:07.268 (7.268 seconds)<br>
+Total time including file writes: 00:00:07.269 (7.269 seconds)
 </div>
 </body>
 </html>
