book and media report content update Wed 09/15/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/14/2021 06:00<br>
+Completed books sorted by folder - 09/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 58 books - 551H 54M / 22D 23H 54M<br>
+Completed in 2021 : 59 books - 567H 47M / 23D 15H 47M<br>
 Total Comic Trades : 25<br>
-Average book length : 9H 30M<br>
-Hours read per week : 15H 1M<br>
-On pace to complete 82 books (784H 22M / 32D 16H 22M) by the end of 2021<br>
+Average book length : 9H 37M<br>
+Hours read per week : 15H 24M<br>
+On pace to complete 83 books (803H 45M / 33D 11H 45M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -39,6 +39,7 @@ Discworld 19 - Feet of Clay - 9H 33M<br>
 Discworld 20 - Hogfather - 9H 48M<br>
 Doomsday Clock 1 - 6H 58M<br>
 Doomsday Clock 2 - 7H 13M<br>
+Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M<br>
 Expanse 6 - Babylon's Ashes - James S. A. Corey - 20H 4M<br>
 Expanse 7 - Persepolis Rising - James S. A. Corey - 20H 34M<br>
 Expanse 8 - Tiamat's Wrath - James S. A. Corey - 19H 8M<br>
@@ -461,9 +462,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
+Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
+Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -476,28 +477,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
+Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2747H 58M / 114D 11H 58M<br>
+214 queued items: 2770H 33M / 115D 10H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.95% of reserve items are queued<br>
+26.19% of reserve items are queued<br>
  <br>
-All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
-Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
-Average completed per year: 44.9 titles - 497H 37M / 20D 17H 37M<br>
+Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
+Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
+Average completed per year: 45.0 titles - 499H 17M / 20D 19H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.0<br>
+Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01.538 (1.538 seconds)<br>
-Total time including file writes: 00:00:01.539 (1.539 seconds)
+Total time to process all reports: 00:00:03.206 (3.206 seconds)<br>
+Total time including file writes: 00:00:03.207 (3.207 seconds)
 </div>
 </body>
 </html>
