--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 09/14/2021 06:00<br>
+Completed books sorted by length - 09/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-391 books<br>
+392 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -309,6 +309,7 @@ Ender 05 - Ender's Shadow - 15H 46M (Completed in 2013)<br>
 The Signal and the Noise - Nate Silver - 15H 47M (Completed in 2021)<br>
 Guns, Germs, and Steel - Jared Diamond - 15H 50M (Completed in 2020)<br>
 Thrawn Trilogy 3 - The Last Command - Timothy Zahn - 15H 51M (Completed in 2014)<br>
+Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M (Completed in 2021)<br>
 The Magicians 2 - The Magician King - Lev Grossman - 15H 53M (Completed in 2016)<br>
 Stranger in a Strange Land - Robert A Heinlein - unabridged - 16H 20M (Completed in 2013)<br>
 The Dresden Files 08 - Proven Guilty - Jim Butcher - 16H 21M (Completed in 2021)<br>
@@ -384,9 +385,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
+Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
+Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -399,28 +400,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
+Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2747H 58M / 114D 11H 58M<br>
+214 queued items: 2770H 33M / 115D 10H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.95% of reserve items are queued<br>
+26.19% of reserve items are queued<br>
  <br>
-All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
-Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
-Average completed per year: 44.9 titles - 497H 37M / 20D 17H 37M<br>
+Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
+Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
+Average completed per year: 45.0 titles - 499H 17M / 20D 19H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.0<br>
+Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01.538 (1.538 seconds)<br>
-Total time including file writes: 00:00:01.539 (1.539 seconds)
+Total time to process all reports: 00:00:03.206 (3.206 seconds)<br>
+Total time including file writes: 00:00:03.207 (3.207 seconds)
 </div>
 </body>
 </html>
