--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/14/2021 06:00<br>
+Reserved books sorted by folder - 09/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 181 books - 2264H 10M / 94D 8H 10M<br>
+Queue - Current Audiobooks : 183 books - 2286H 45M / 95D 6H 45M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -45,7 +45,8 @@ Dirk Gently 3 - The Salmon of Doubt - Douglas Adams - 8H 6M<br>
 Discworld 21 - Jingo - 10H 44M<br>
 Discworld 22 - The Last Continent - 9H 41M<br>
 Discworld 23 - Carpe Jugulum - 9H 39M<br>
-Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M<br>
+Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M<br>
+Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M<br>
 East of Eden - John Steinbeck - 25H 35M<br>
 Educated - Tara Westover - 12H 13M<br>
 Effortless - Greg McKeown - 6H 4M<br>
@@ -70,6 +71,7 @@ How to Talk When Kids Won't Listen - Joanna Faber - 8H 56M<br>
 HP 5 - Harry Potter and the Order of the Phoenix - J.K. Rowling - 27H 10M<br>
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M<br>
 HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M<br>
+HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
 HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M<br>
 HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M<br>
@@ -406,7 +408,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 447 books - 6089H 8M / 253D 17H 8M<br>
+Book Reserve - Audiobooks : 445 books - 6054H 11M / 252D 6H 11M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -515,8 +517,6 @@ Doctor Who - Dark Eyes (Eighth Doctor) - 3H 40M<br>
 Doctor Who - Dark Eyes 2 (Eighth Doctor) - 4H 13M<br>
 Double Star - Robert A. Heinlein - 6H 16M<br>
 Dracula - Bram Stoker - 18H 36M<br>
-Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M<br>
-Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M<br>
 Dying of the Light - George R.R. Martin - 11H 43M<br>
 Earthseed 1 - Parable of the Sower - Octavia E. Butler - 12H 5M<br>
 Earthseed 2 - Parable of the Talents - Octavia E. Butler - 15H 32M<br>
@@ -860,9 +860,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
+Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
+Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -875,28 +875,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
+Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2747H 58M / 114D 11H 58M<br>
+214 queued items: 2770H 33M / 115D 10H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.95% of reserve items are queued<br>
+26.19% of reserve items are queued<br>
  <br>
-All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
-Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
-Average completed per year: 44.9 titles - 497H 37M / 20D 17H 37M<br>
+Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
+Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
+Average completed per year: 45.0 titles - 499H 17M / 20D 19H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.0<br>
+Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01.538 (1.538 seconds)<br>
-Total time including file writes: 00:00:01.539 (1.539 seconds)
+Total time to process all reports: 00:00:03.206 (3.206 seconds)<br>
+Total time including file writes: 00:00:03.207 (3.207 seconds)
 </div>
 </body>
 </html>
