--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/14/2021 06:00<br>
+Reserved books sorted by length - 09/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 817 books<br>
@@ -34,6 +34,7 @@ William Shakespeare's The Empire Striketh Back - 3H 26M (Book Reserve - Audioboo
 Spider-gwen vol 3 - 3H 29M (Book Reserve - Comic Trades)<br>
 The Stranger - Albert Camus - 3H 30M (Queue - Current Audiobooks)<br>
 The Canterbury Tales II - Geoffrey Chaucer - 3H 31M (Book Reserve - Audiobooks)<br>
+HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M (Queue - Current Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 1 - Sir Arthur Conan Doyle - 3H 32M (Book Reserve - Audiobooks)<br>
 The Canterbury Tales III - Geoffrey Chaucer - 3H 34M (Book Reserve - Audiobooks)<br>
 William Shakespeare's The Jedi Doth Return - 3H 34M (Book Reserve - Audiobooks)<br>
@@ -536,7 +537,6 @@ Lunar Chronicles 3 - Cress - Marissa Meyer - 15H 45M (Book Reserve - Audiobooks)
 The Dresden Files 17 - Battle Ground - Jim Butcher - 15H 47M (Book Reserve - Audiobooks)<br>
 The Dresden Files 15 - Skin Game - Jim Butcher - 15H 49M (Book Reserve - Audiobooks)<br>
 The Iliad - Homer - 15H 52M (Book Reserve - Audiobooks)<br>
-Dune 4 - God Emperor of Dune  - Frank Herbert - 15H 52M (Queue - Current Audiobooks)<br>
 The Shining - Stephen King - 15H 54M (Queue - Current Audiobooks)<br>
 Inkheart 1 - Inkheart - Cornelia Funke - 15H 55M (Book Reserve - Audiobooks)<br>
 Aftermath Trilogy 3 - Empire's End - Chuck Wendig - 15H 55M (Queue - Current Audiobooks)<br>
@@ -565,7 +565,7 @@ Witcher 4 - The Tower of Swallows - Andrzej Sapkowski - 16H 30M (Book Reserve - 
 Children of Time 1 - Children of Time - Adrian Tchaikovsky - 16H 31M (Queue - Audible Audiobooks)<br>
 The Information - James Gleick - 16H 42M (Queue - Current Audiobooks)<br>
 Captain Vorpatril's Alliance - Lois McMaster Bujold - 16H 43M (Book Reserve - Audiobooks)<br>
-Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M (Book Reserve - Audiobooks)<br>
+Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M (Queue - Current Audiobooks)<br>
 Parasitology 2 - Symbiont - Mira Grant - 16H 52M (Book Reserve - Audiobooks)<br>
 Locked Tomb 1 - Gideon the Ninth - Tamsyn Muir - 16H 55M (Queue - Current Audiobooks)<br>
 The Book of Swords - George R. R. Martin, Robin Hobb, Scott Lynch, Garth Nix, Gardner Dozois - 16H 56M (Book Reserve - Physical and Kindle Books)<br>
@@ -591,7 +591,7 @@ Silo 1 - Wool (1-5) - Hugh Howey - 17H 53M (Queue - Audible Audiobooks)<br>
 Children of God - Mary Doria Russell - 17H 55M (Book Reserve - Audiobooks)<br>
 The Dresden Files 13 - Ghost Story - Jim Butcher - 18H 1M (Book Reserve - Audiobooks)<br>
 Spinning Silver - Naomi Novik - 18H 1M (Book Reserve - Audiobooks)<br>
-Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M (Book Reserve - Audiobooks)<br>
+Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M (Queue - Current Audiobooks)<br>
 Leadership In Turbulent Times - Doris Kearns Goodwin - 18H 10M (Book Reserve - Audiobooks)<br>
 Mirror Dance - Lois McMaster Bujold - 18H 11M (Book Reserve - Audiobooks)<br>
 Life Lessons from the Great Books - The Great Courses - 18H 16M (Queue - Audible Audiobooks)<br>
@@ -740,9 +740,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 181 books - 2264H 10M / 94D 8H 10M<br>
+Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 58 books - 551H 54M / 22D 23H 54M<br>
+Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -755,28 +755,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 447 books - 6089H 8M / 253D 17H 8M<br>
+Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-212 queued items: 2747H 58M / 114D 11H 58M<br>
+214 queued items: 2770H 33M / 115D 10H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.95% of reserve items are queued<br>
+26.19% of reserve items are queued<br>
  <br>
-All books included in this report: 1208 titles - 14458H 49M / 602D 10H 49M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 391 titles - 4329H 42M / 180D 9H 42M<br>
-Total remaining in queue and reserve: 817 titles - 10129H 6M / 422D 1H 6M<br>
-Average completed per year: 44.9 titles - 497H 37M / 20D 17H 37M<br>
+Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
+Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
+Average completed per year: 45.0 titles - 499H 17M / 20D 19H 17M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.0<br>
+Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01.538 (1.538 seconds)<br>
-Total time including file writes: 00:00:01.539 (1.539 seconds)
+Total time to process all reports: 00:00:03.206 (3.206 seconds)<br>
+Total time including file writes: 00:00:03.207 (3.207 seconds)
 </div>
 </body>
 </html>
